httpbin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo-dev
  name: demo-dev
spec: {}
